# wsp_tools

./: .gitignore  OAM.py  README.md  dummy.py  laplace.py  laplace_cone.py  laplace_contour.py  phase_opt.py  prereleasesteps  releasesteps  requirements.txt  setup.cfg  setup.py  slides.js
200425_LG_glaser/: gauge_invar_glaser.py  gen_horizontal_seq.py  gen_vertical_seq.py  plot_free_solns.py
devtests/: devtests.sh  test_beam.py  test_cielab.py  test_constants.py  test_docs.py  test_ip.py  test_ltem.py  test_pyplot.py  test_sitie.py
docs/: beam.html  cielab.html  constants.html  image_processing.html  index.html  lorentzSim.html  ltem.html  pyplotwrapper.html  sitie.html
docs/docsmd/: docs.md  docsgh.md
docs/wsp_tools/: beam.html  cielab.html  constants.html  image_processing.html  index.html  index.md  lorentzSim.html  pyplotwrapper.html  sitie.html
laplace-solve/: laplace2d.py
log-polar-sorter/: UnwrapperElement.ipynb  small_l_val_analysis.ipynb
notebooks/: 180725_wsp_oamSorting (1).ipynb  180725_wsp_oamSorting_FilledIn.ipynb  CorrectedCoordinateTransformation_181117.ipynb  DistortionFactor_181210.ipynb  MMPoster_stuff.ipynb  Untitled.ipynb  Untitled1.ipynb
tests/: beam.py  cielab.py  constants.py  docs.py  ltem.py  requirements.txt  sitie.py  test_beam.py  test_cielab.py  test_constants.py  test_image_processing.py  test_ltem.py  test_sitie.py
wsp_tools/: SITIE.py  __init__.py  beam.py  cielab.py  constants.py  dummy.py  image_processing.py  lorentzSim.py  ltem.py  ncempywrap.py  pyplotwrapper.py  sitie.py
wsp_tools.egg-info/: PKG-INFO  SOURCES.txt
(+14 files in other folders)
