[metadata]
name = wsp-tools
version = 1.2.0
author = Will Parker
author_email = will.parker0@gmail.com
description = TEM data analysis and simulation tools developed by WSP.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/McMorranLab/wsp_tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
	numpy
	matplotlib
	scipy
	pdoc3
	deprecated
